added script in testShowIMg to show img with the path of th table

--- a/old_version/OldIndex.html
+++ b/old_version/OldIndex.html
@@ -10,6 +10,13 @@
     <title>Application Gouvernance</title>
   </head>
   <body>
+    <img
+      src="file:///c:/xampp/htdocs/application_Gouv_tech/backEnd/traitementIntervention/image_intervention_Tech/22-chamonix.jpg"
+      alt=""
+      width="60"
+      height="60"
+    />
+
     <div class="wrapper">
       <header class="header">
         <h1>Prototype Application Gouvernance</h1>
